--- a/KriddieFolder/GAVItrib2_Geomorphology_2022-04-10.Rmd
+++ b/KriddieFolder/GAVItrib2_Geomorphology_2022-04-10.Rmd
@@ -62,7 +62,8 @@ Let's do the synoptic one trib at a time
 
 ```{r add synop to df}
 #synop <- read.csv(here::here("Synoptic/GAVI.csv"))
-synop <- read.csv(here::here("Synoptic/GAVI_2022-01-27.csv"))
+#synop <- read.csv(here::here("Synoptic/GAVI_2022-01-27.csv"))
+synop <- read.csv(here::here("Synoptic/GAVI_2022-04-19.csv"))
 
 synop$X <- NULL
 
@@ -344,7 +345,7 @@ fig
 
 ```{r write, echo=FALSE}
 
-write.csv(df_prediction, here::here("ProcessedData/GAVI_Trib2_synoptic_2022-04-10.csv"))
+write.csv(df_prediction, here::here("ProcessedData/GAVI_Trib2_synoptic_2022-04-19.csv"))
 ```
 
 
