--- a/KriddieFolder/synop_fig1_2022-03-24.Rmd
+++ b/KriddieFolder/synop_fig1_2022-03-24.Rmd
@@ -27,7 +27,8 @@ We start with the most recently processes synoptic data. It includes calculates 
 #read in the most recent synoptic data
 
 #df <- read.csv(here::here("ProcessedData/ALL_synoptic_2022-03-21.csv"))
-df <- read.csv(here::here("ProcessedData/ALL_synoptic_2022-03-24.csv"))
+#df <- read.csv(here::here("ProcessedData/ALL_synoptic_2022-03-24.csv"))
+df <- read.csv(here::here("ProcessedData/ALL_synoptic_2022-04-19.csv"))
 df$X <- NULL
 df <- unique(df)
 df$EOS_no[df$EOS_no == "EOS1"] <- "EOS_1"
