updating packages is all i've been able to accomplish all day. taking so long why

--- a/KriddieFolder/synop_fig1_2022-04-20.Rmd
+++ b/KriddieFolder/synop_fig1_2022-04-20.Rmd
@@ -14,10 +14,10 @@ library(tidyr) # for `gather`
 library(ggplot2)
 library(cowplot)
 library(tidyverse)
-library(rstatix)
+#library(rstatix)
 library(ggpubr)
 library(plotly)
-library(rstatix)
+#library(rstatix)
 ```
 
 ## synop_fig1_2022-03-21
